file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp)
foreach(src IN ITEMS ${srcs})
    find_package(fmt REQUIRED)
    get_filename_component(name "${src}" NAME_WLE)
    add_executable(${name} src/${name}.cpp)
    message(${name})

    target_link_libraries(${name} PUBLIC co_task)
    target_link_libraries(${name} PRIVATE co_async)
    target_link_libraries(${name} PUBLIC enum_magic)
    target_link_libraries(${name} PRIVATE fmt::fmt)
endforeach()
